--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "cross-env NODE_ENV=development webpack --config webpack/webpack.dev.js --progress",
     "build": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.prod.js --progress",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,10 +23,16 @@
   },
   "homepage": "https://github.com/issue-tracker/issue-tracker-web#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.23.4",
     "dotenv": "^16.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
+    "react-query": "^4.0.0",
+    "react-router-dom": "^6.3.0",
+    "recoil": "^0.7.4",
+    "remark-gfm": "^3.0.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -62,6 +69,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^28.1.3",
     "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
