--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src", 
+    "baseUrl": ".",
+    "paths": {
+        "@/*": ["src/*"]
+    },
     "target": "es5",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "esnext",
