--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.30.6",
     "@typescript-eslint/parser": "^5.30.6",
+    "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
     "clean-webpack-plugin": "^4.0.0",
