--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,21 +1,13 @@
-on:
-  push:
-    branches:
-      - "deploy"
+name: "Build & Deploy"
+
+on: push
 
 jobs:
-  deploy:
-    name: "Build & Deploy"
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: git clone
         uses: actions/checkout@v2
-
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ secrets.NODE_VERSION }}
 
       - name: Install Dependencies
         run: npm install
@@ -27,7 +19,8 @@ jobs:
         env:
           ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
           SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-        run: aws s3 cp \
-          --recursive \
-          --region ap-northeast-2 \
-          dist s3://issue-tracker-github-action-test
+        run: |
+          aws s3 cp \
+            --recursive \
+            --region ap-northeast-2 \
+            dist s3://issue-tracker-github-action-test
