--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "build": "cross-env NODE_ENV=production webpack --config ./webpack/webpack.prod.js --progress",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest"
+    "test": "jest",
+    "lint": "echo lint",
+    "tsc": "echo tsc"
   },
   "repository": {
     "type": "git",
