--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,14 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Deploy
+      - name: Transfer to S3 for serving static
+        uses: jakejarvis/s3-sync-action@master
+        with:
+          args: --acl public-read --follow-symlinks --delete
         env:
+          AWS_S3_BUCKET: '${{ secrets.AWS_BUCKET_NAME }}'
+          AWS_REGION: '${{ secrets.AWS_BUCKET_REGION }}'
           ACCESS_KEY_ID: "${{ secrets.AWS_ACCESS_KEY_ID }}"
           SECRET_ACCESS_KEY: "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-        run: |
-          aws s3 cp \
-            --recursive \
-            --region ap-northeast-2 \
-            dist s3://issue-tracker-github-action-test
+          SOURCE_DIR: "build"
+
