--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,12 @@ jobs:
       - name: git clone
         uses: actions/checkout@v2
 
+      - name : Docker Environment Varibale File 
+        run: echo -e "REACT_APP_GITHUB_AUTH_URL=${{secrets.REACT_APP_GITHUB_AUTH_URL}}\n
+                      REACT_APP_KAKAO_AUTH_URL=${{secrets.REACT_APP_KAKAO_AUTH_URL}}\n
+                      REACT_APP_NAVER_AUTH_URL=${{secrets.REACT_APP_NAVER_AUTH_URL}}\n
+                      REACT_APP_PUBLIC_URL=${{secrets.REACT_APP_PUBLIC_URL}}\n" > ./.env
+
       - name: Install Dependencies
         run: npm install --force
 
